[924] Fix: jsonencode needs more specific instructions on how to encode the list to a string

--- a/terraform/pipeline/step-functions/Demo-Polars.tmpl
+++ b/terraform/pipeline/step-functions/Demo-Polars.tmpl
@@ -17,7 +17,7 @@
                 "LaunchType": "FARGATE",
                 "NetworkConfiguration": {
                   "AwsvpcConfiguration": {
-                    "Subnets": ["${public_subnet_ids}"],
+                    "Subnets": ${public_subnet_ids},
                     "SecurityGroups": ["${security_group_id}"],
                     "AssignPublicIp": "ENABLED"
                   }
