[924] Refactor: temporarily pass in subnet ids as a parameter so they are printed in tf plan

--- a/terraform/pipeline/step-functions/Demo-Polars.tmpl
+++ b/terraform/pipeline/step-functions/Demo-Polars.tmpl
@@ -4,6 +4,9 @@
   "States": {
     "RunCQCIngestion": {
       "Type": "Parallel",
+      "Parameters": {
+        "test_subnets": ${public_subnet_ids}
+      }
       "Branches": [
         {
           "StartAt": "RunProviders",
@@ -17,7 +20,7 @@
                 "LaunchType": "FARGATE",
                 "NetworkConfiguration": {
                   "AwsvpcConfiguration": {
-                    "Subnets": ${public_subnet_ids},
+                    "Subnets": [${public_subnet_ids}],
                     "SecurityGroups": ["${security_group_id}"],
                     "AssignPublicIp": "ENABLED"
                   }
